@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4647] Cleanup: Deprecate TemplateHelper::pi_getPidList
 - [#4625] Cleanup: Fix all instances of "Underscores are not allowed in method names"
 - [#4643] Cleanup: Make the Time class abstract
 - [#4631] Cleanup: Drop useless class comments
